Refactor and enhance `SearchServlet` to improve search functionality, add force refresh indexing, and streamline exception handling. Update CSS for better responsiveness and adjust JSP templates for consistency.